# siege-operator-randomizer

./: .gitignore  README.md  better_op_rando_window.py  new_op_rando_window.py  new_op_rando_window_not_hotkey.py  op_rando_window.py  op_rando_window_with-icons(only_on_disable_menu).py  op_rando_window_with-icons_with-disable.py  op_rando_window_with_disable.py  operators.txt  requirements.txt
all_in_one/: op_rando_with_scrape.py
multi_file/R6OperatorRandomizer/_internal/: _tkinter.pyd
old/: better_op_rando_window.py  siege op random.py  siege_op_name_randomization.py  twitch siege bot.py
old/twitch bot/: .env  twitch siege bot.py
rust/siege_op_rando/: 1)copy_files.bat  Cargo.toml  build.rs  build_rename.bat
rust/siege_op_rando/src/: main.rs
scraper/: operators_list.json  scrape_images_and_op_Names.py
with icons/: op_rando_with-icons_with-disable.py
